--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "devDependencies": {
     "babel": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
+    "browserify": "^16.2.3",
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.0",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "i18next": "^11.9.0"
   }
 }
