--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "license": "MIT",
   "devDependencies": {
     "babel": "^6.1.18",
+    "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.1.18",
+    "babelify": "^8.0.0",
     "browserify": "^16.2.3",
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.0",
     "gulp-sourcemaps": "^1.6.0",
+    "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
