--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "watchify": "^3.11.0"
   },
   "dependencies": {
-    "i18next": "^11.9.0"
+    "i18next": "^11.9.0",
+    "loc-i18next": "^0.1.4"
   }
 }
